--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "eslint-config-airbnb": "^18.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "https": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
