--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "Heeja.github.io/HighEndKnowledge_front",
+  "homepage": "https://Heeja.github.io/HighEndKnowledge_front",
   "devDependencies": {
     "gh-pages": "^2.1.1"
   }
